1825.	[bug]		Missing unlock on out of memory error from in
			rbtdb.c:subtractrdataset().  [RT #13519]

1824.	[bug]		Memory leak on dns_zone_setdbtype() failure.
			[RT #13510]

1823.	[bug]		Wrong macro used to check for point to point interface.
			[RT#13418]

1822.	[bug]		check-names test for RT was reversed. [RT #13382]

1821.	[placeholder]

1820.	[placeholder]	rt13659

1819.	[bug]		The validator needed to check both the algorithm and
			digest types of the DS to determine if it could be
			used to introduce a secure zone. [RT #13593]

1818.	[bug]		'named-checkconf -z' triggered an INSIST. [RT #13599]

1817.	[placeholder]	rt13587

1816.	[placeholder]	rt13597

1815.	[placeholder]	rt13086

1814.	[func]		UNIX domain controls are now supported.

1813.	[placeholder]	rt13505

1812.	[port]		win32: IN6_IS_ADDR_UNSPECIFIED macro is incorrect.
			[RT #13453]

1811.	[func]		Preserve the case of domain names in rdata during
			zone transfers. [RT #13547]

1810.	[placeholder]	rt13212

1809.	[placeholder]	rt13463

1808.	[bug]		zone.c:notify_zone() contained a race condition,
			zone->db could change underneath it.  [RT #13511]

1807.	[placeholder]	rt13526

1806.	[bug]		The resolver returned the wrong result when a CNAME /
			DNAME was encountered when fetching glue from a
			secure namespace. [RT #13501]

1805.	[bug]		Pending status was not being cleared when DLV was
			active. [RT #13501]

1804.	[placeholder]	rt10114

1803.	[placeholder]	rt13483

1802.	[placeholder]	rt11280

1801.	[func]		Report differences between hints and real NS rrset
			and associated address records.

1800.	[bug]		Changes #1719 allowed a INSIST to be triggered.
			[RT #13428]

1799.	[placeholder]	rt13438

1798.	[func]		The server syntax has been extended to support a
			range of servers.  [RT #11132]

1797.	[func]		named-checkconf now check acls to verify that they
			only refer to existing acls. [RT #13101]

1796.	[func]		"rndc freeze/thaw" now freezes/thaws all zones.
